@@ -4,6 +4,7 @@ New features:
 ........S. [ZBXNEXT-2969] added support for suffixed and negative trigger function parameters (gleb)
 
 Bug fixes:
+..F....... [ZBX-11256] synchronized the trigger wizzard form with trigger edit form changes (Gunars)
 ........S. [ZBX-11300] fixed variable used in forecast function (gleb)
 A..G...... [ZBX-11146] fixed validation of item update interval 0 (Gunars, vso)
 .......PS. [ZBX-11021] fixed discoverer to log that it has started before SNMP library initialization (vso)
